syntax = "proto3";

message TheUser {
    enum Gender {
        MALE = 0;
        FEMALE = 1;
        OTHER = 2;
    }
    uint64 user_id = 1;
    string username = 2;
    uint32 birthday = 3;
    Gender gender = 4;
}

message TheSnapshot {
    uint64 datetime = 1;
    ThePose pose = 2;
    TheColorImage color_image = 3;
    TheDepthImage depth_image = 4;
    TheFeelings feelings = 5;
}

message ThePose {
    message TheTranslation {
        double x = 1;
        double y = 2;
        double z = 3;
    }
    message TheRotation {
        double x = 1;
        double y = 2;
        double z = 3;
        double w = 4;
    }
    TheTranslation translation = 1;
    TheRotation rotation = 2;
}

message TheColorImage {
    uint32 width = 1;
    uint32 height = 2;
    bytes data = 3;
}

message TheDepthImage {
    uint32 width = 1;
    uint32 height = 2;
    repeated float data = 3;
}

message TheFeelings {
    float hunger = 1;
    float thirst = 2;
    float exhaustion = 3;
    float happiness = 4;
}
